--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -14,6 +14,9 @@
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object":""
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
